--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/PowerPackControlBar.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/PowerPackControlBar.mxml
@@ -9,6 +9,7 @@
 			
 			import net.vdombox.powerpack.dialog.AirBuildProperties;
 			import net.vdombox.powerpack.dialog.ProjectsSettingsDialog;
+			import net.vdombox.powerpack.lib.extendedapi.utils.FileUtils;
 			import net.vdombox.powerpack.lib.player.managers.ContextManager;
 			import net.vdombox.powerpack.lib.player.template.Template;
 			import net.vdombox.powerpack.lib.player.template.TemplateProject;
@@ -92,6 +93,30 @@
 				MenuManager.getInstance().addEventListener(MenuGeneralEvent.MENU_TEMPLATE_STATE_CHANGED, menuTemplateStateChangedHandler);
 			}
 			
+			private function get ctrlString () : String
+			{
+				return isMac ? String.fromCharCode(8984) : "Ctrl";
+			}
+			
+			private function get altString () : String
+			{
+				return isMac ? String.fromCharCode(8997) : "Alt";
+			}
+			
+			private function get separator () : String
+			{
+				return isMac ? "" : " + ";
+			}
+			
+			private function get isMac () : Boolean
+			{
+				return FileUtils.OS == FileUtils.OS_MAC;;
+			}
+			
+			private function get ctrlAndAltString () : String
+			{
+				return isMac ? altString + ctrlString : ctrlString + separator + altString;
+			}
 		]]>
 	</mx:Script>
 	
@@ -124,19 +149,19 @@
 							 sourceEnabled="@Embed('assets/icons/runEnabled.png')"
 							 sourceDisabled="@Embed('assets/icons/runDisabled.png')"
 							 click="menuItem_clickHandler(event, ITEM_TYPE_RUN)"
-							 toolTip="Run (Ctrl + R)"/>
+							 toolTip="Run ({ctrlString}{separator}R)"/>
 	
 	<control:ControlBarImage id="menuBtnDebug"
 							 sourceEnabled="@Embed('assets/icons/debugEnabled.png')"
 							 sourceDisabled="@Embed('assets/icons/debugDisabled.png')"
 							 click="menuItem_clickHandler(event, ITEM_TYPE_DEBUG)" 
-							 toolTip="Debug (Ctrl + D)"/>
+							 toolTip="Debug ({ctrlString}{separator}D)"/>
 	
 	<control:ControlBarImage id="menuBtnStepByStep"
 							 sourceEnabled="@Embed('assets/icons/stepByStepEnabled.png')"
 							 sourceDisabled="@Embed('assets/icons/stepByStepDisabled.png')"
 							 click="menuItem_clickHandler(event, ITEM_TYPE_STEP_BY_STEP)" 
-							 toolTip="Step by step (Ctrl + Alt + D)"/>
+							 toolTip="Step by step ({ctrlAndAltString}{separator}D)"/>
 
 	<mx:VRule height="20"/>
 	
@@ -144,30 +169,30 @@
 							 sourceEnabled="@Embed('assets/icons/ResumeEnabled.png')"
 							 sourceDisabled="@Embed('assets/icons/ResumeDisabled.png')"
 							 click="menuItem_clickHandler(event, ITEM_TYPE_RESUME)" 
-							 toolTip="Resume (Ctrl + M)"/>
+							 toolTip="Resume ({ctrlString}{separator}M)"/>
 	
 	<control:ControlBarImage id="menuBtnStepInto"
 							 sourceEnabled="@Embed('assets/icons/StepIntoEnabled.png')"
 							 sourceDisabled="@Embed('assets/icons/StepIntoDisabled.png')"
 							 click="menuItem_clickHandler(event, ITEM_TYPE_STEP_INTO)" 
-							 toolTip="Step Into (Ctrl + I)"/>
+							 toolTip="Step Into ({ctrlString}{separator}I)"/>
 	
 	<control:ControlBarImage id="menuBtnStepOver"
 							 sourceEnabled="@Embed('assets/icons/StepOverEnabled.png')"
 							 sourceDisabled="@Embed('assets/icons/StepOverDisabled.png')"
 							 click="menuItem_clickHandler(event, ITEM_TYPE_STEP_OVER)" 
-							 toolTip="Step Over (Ctrl + O)"/>
+							 toolTip="Step Over ({ctrlString}{separator}O)"/>
 
 	<control:ControlBarImage id="menuBtnStepReturn"
 							 sourceEnabled="@Embed('assets/icons/StepReturnEnabled.png')"
 							 sourceDisabled="@Embed('assets/icons/StepReturnDisabled.png')"
 							 click="menuItem_clickHandler(event, ITEM_TYPE_STEP_RETURN)" 
-							 toolTip="Step Return (Ctrl + E)"/>
+							 toolTip="Step Return ({ctrlString}{separator}E)"/>
 	
 	<control:ControlBarImage id="menuBtnBreak"
 							 sourceEnabled="@Embed('assets/icons/BreakEnabled.png')"
 							 sourceDisabled="@Embed('assets/icons/BreakDisabled.png')"
 							 click="menuItem_clickHandler(event, ITEM_TYPE_BREAK)" 
-							 toolTip="Break (Ctrl + B)"/>
+							 toolTip="Break ({ctrlString}{separator}B)"/>
 	
 </mx:ControlBar>
