initialGraphName for old template variant
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7998 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/Player.mxml
+++ b/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/Player.mxml
@@ -267,7 +267,7 @@
 
 				tpl = ContextManager.templates.getItemAt ( 0 ) as Template;
 
-				ContextManager.templateStruct = new TemplateStruct ( tpl.xmlStructure, currentTemplate.selectedProject.initialGraphName );
+				ContextManager.templateStruct = new TemplateStruct ( tpl.xmlStructure );
 
 				var validateArr:Array = ContextManager.templateStruct.validate ().array;
 
