initialGraphName for old template variant
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7999 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -617,7 +617,7 @@
 						if ( ContextManager.templateStruct )
 							ContextManager.templateStruct.terminated = true;
 	
-						ContextManager.templateStruct = new TemplateStruct( pnl_graphs.toXML(), currentTemplate.selectedProject.initialGraphName);
+						ContextManager.templateStruct = new TemplateStruct( pnl_graphs.toXML() );
 	
 						switch ( menuItemName )
 						{
@@ -770,7 +770,7 @@
 					if ( dialog.chkNames )	 flags |= TemplateValidateOptions.SET_UNIQ_NAMES;
 				}
 
-				ContextManager.templateStruct = new TemplateStruct( currentTemplate.xmlStructure, currentTemplate.selectedProject.initialGraphName );
+				ContextManager.templateStruct = new TemplateStruct( currentTemplate.xmlStructure );
 
 				var validateArr : Array = ContextManager.templateStruct.validate( flags ).array;
 
