--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/ProjectProperties.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/ProjectProperties.mxml
@@ -320,7 +320,7 @@
 		]]>
 	</mx:Script>
 	
-	<mx:Grid>
+	<mx:Grid width="100%">
 		
 		<mx:GridRow width="100%" height="22">
 			<mx:GridItem width="115" height="100%">
