--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/ProjectProperties.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/ProjectProperties.mxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml"
 		 xmlns:controls="net.vdombox.powerpack.lib.extendedapi.controls.*"
-		 styleName="dlgContent" 
 		 horizontalAlign="left" xmlns:customize="net.vdombox.powerpack.customize.*"
 		 verticalScrollPolicy="off" horizontalScrollPolicy="off"
 		 initialize="initializeHandler(event)"
@@ -155,14 +154,14 @@
 			protected function initializeHandler(event:FlexEvent):void
 			{
 				var defaultCaptions : Object = {
-					template_name : "Template name",
-					template_id : "Application ID",
-					template_ID_tooltip : "The application identifier string, unique to this application. Required.",
+					template_name : "Name",
+					template_id : "ID",
+					template_ID_tooltip : "The project identifier string, unique to this project. Required.",
 					template_description : "Description",
-					template_picture : "Template picture",
+					template_picture : "Picture",
 					template_use_picture : "Use picture",
 					template_remove_pic : "Remove picture",
-					template_key : "Template key",
+					template_key : "Key",
 					template_images : "Images"
 				};
 				
@@ -323,7 +322,7 @@
 	<mx:Grid width="100%">
 		
 		<mx:GridRow width="100%" height="22">
-			<mx:GridItem width="115" height="100%">
+			<mx:GridItem width="120" height="100%">
 				<mx:Label text="{LanguageManager.sentences.template_name}:" />
 			</mx:GridItem>
 			<mx:GridItem width="100%" height="100%">
@@ -332,7 +331,7 @@
 		</mx:GridRow>
 		
 		<mx:GridRow width="100%" height="22">
-			<mx:GridItem width="115" height="100%">
+			<mx:GridItem width="120" height="100%">
 				<mx:Label text="{LanguageManager.sentences.template_id}:" />
 			</mx:GridItem>
 			<mx:GridItem width="100%" height="100%">
@@ -343,7 +342,7 @@
 		</mx:GridRow>
 		
 		<mx:GridRow width="100%" height="90">
-			<mx:GridItem width="115" height="100%">
+			<mx:GridItem width="120" height="100%">
 				<mx:Label text="{LanguageManager.sentences.template_description}:" />
 			</mx:GridItem>
 			<mx:GridItem width="100%" height="100%">
@@ -358,9 +357,9 @@
 		</mx:GridRow>
 		
 		<mx:GridRow width="100%" height="22">
-			<mx:GridItem width="115" height="100%"
+			<mx:GridItem width="120" height="100%"
 						 horizontalScrollPolicy="off">
-				<mx:Label text="Initial Graph: " width="115"/>
+				<mx:Label text="Initial Graph: " width="120"/>
 			</mx:GridItem>
 			
 			<mx:GridItem width="100%" height="100%">
@@ -380,9 +379,9 @@
 		</mx:GridRow>
 		
 		<mx:GridRow width="100%" height="22">
-			<mx:GridItem width="115" height="100%"
+			<mx:GridItem width="120" height="100%"
 						 horizontalScrollPolicy="off">
-				<mx:Label text="Output folder: " width="115"/>
+				<mx:Label text="Output folder: " width="120"/>
 			</mx:GridItem>
 				
 			<mx:GridItem width="100%" height="100%">
@@ -397,9 +396,9 @@
 		</mx:GridRow>
 		
 		<mx:GridRow width="100%" height="22">
-			<mx:GridItem width="115" height="100%"
+			<mx:GridItem width="120" height="100%"
 						 horizontalScrollPolicy="off">
-				<mx:Label text="Output file name: " width="115"/>	
+				<mx:Label text="Output file name: " width="120"/>	
 			</mx:GridItem>
 			
 			<mx:GridItem width="100%" height="100%">
@@ -417,12 +416,17 @@
 		</mx:GridRow>
 		
 		<mx:GridRow width="100%" height="22">
-			<mx:GridItem width="115" height="100%"
+			<mx:GridItem width="120" height="100%"
 						 horizontalScrollPolicy="off">
-				<mx:Label text="Embeded application: " width="115"/>
+				
+				<mx:Label text="Embedded application: " 
+						  width="120"/>
+				
 			</mx:GridItem>
+			
 			<mx:GridItem width="100%" height="100%">
 				<controls:FileBrowseBox id="embededApplicationBrowseBox"
+									toolTip="Embedded VDOM application (*.xml)"
 									mode="{FileBrowseBox.MODE_OPEN}"
 									defaultPath="{File.desktopDirectory.nativePath}"
 									change="validateAppPath()"
@@ -434,7 +438,7 @@
 		</mx:GridRow>
 		
 		<mx:GridRow width="100%" height="22">
-			<mx:GridItem width="115" height="100%">
+			<mx:GridItem width="120" height="100%">
 				<mx:Label text="{LanguageManager.sentences.template_key}:" />
 			</mx:GridItem>
 			<mx:GridItem width="100%" height="100%">
@@ -458,10 +462,10 @@
 		</mx:GridRow>
 		
 		<mx:GridRow id="pictureGridRow" 
-					width="100%" height="115" 
+					width="100%" height="120" 
 					verticalAlign="middle">
 			<mx:GridItem id="pictureGridColumn" 
-						 width="115" height="115"
+						 width="120" height="120"
 						 verticalAlign="middle" horizontalAlign="center">
 				
 				<controls:Base64Image id="b64Img"
@@ -471,7 +475,7 @@
 									  verticalAlign="middle" horizontalAlign="center"/>
 			</mx:GridItem>
 			
-			<mx:GridItem width="100%" height="115" verticalAlign="middle">
+			<mx:GridItem width="100%" height="120" verticalAlign="middle">
 				<mx:Button id="btnBrowsePic"
 						   label="{LanguageManager.sentences.browse}..."		
 						   click="onPicBrowseClick(event)"/>
