--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/AirBuildProperties.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/AirBuildProperties.mxml
@@ -427,8 +427,8 @@
 					return;
 				}
 				
-				var msgErrorAppParams	: String = "Builder not available. Check application params.";
-				var msgErrorSDKPath		: String = "Builder not available. Check SDK path.";
+				var msgErrorAppParams	: String = "Builder not available. Check template properties.";
+				var msgErrorSDKPath		: String = "Builder not available. Check SDK folder path.";
 				
 				buildLabel.text = validFlexSDKPath && validAirSDKPath ? msgErrorAppParams : msgErrorSDKPath;
 			}
@@ -446,7 +446,7 @@
 		</mx:VBox>
 		
 		<mx:HBox width="450" horizontalGap="3">
-			<mx:Label text="Flex SDK 4.1.0: " width="115"/>
+			<mx:Label text="Flex SDK 4.1.0 folder: " width="115"/>
 			<mx:VBox width="100%" verticalAlign="middle" horizontalAlign="center" verticalGap="0">
 				<controls:FileBrowseBox id="flexSDK_4_1_BrowseBox"
 										mode="{FileBrowseBox.MODE_DIR}"
@@ -464,7 +464,7 @@
 		<mx:HBox width="450" horizontalGap="3" visible="{useLinuxSDK}"
 				 creationComplete="airSDKCreationCompleteHandler(event)"
 				 id="airSdkGroup">
-			<mx:Label text="Air SDK 2.6: " width="115"/>
+			<mx:Label text="Air SDK 2.6 folder: " width="115"/>
 			<mx:VBox width="100%" verticalAlign="middle" horizontalAlign="center" verticalGap="0">
 				<controls:FileBrowseBox id="airSDKLinuxBrowseBox"
 										mode="{FileBrowseBox.MODE_DIR}"
