Close tabs from change application fixed
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8005 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/TabsPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/TabsPanel.mxml
@@ -119,6 +119,36 @@
 				dispatchEvent( new TabsPanelEvent( TabsPanelEvent.TAB_DELETE, actionVO ) );
 			}
 			
+			public function checkTabs( applicationID : String ) : Boolean
+			{
+				var flag : Boolean = false;
+				
+				if ( _tabs && _tabs.length > 0 )
+				{
+					if ( _tabs[0] is ServerActionVO )
+					{
+						if ( _tabs[0].containerVO is PageVO && _tabs[0].containerVO.applicationVO.id != applicationID)
+							flag = true;
+						else if ( _tabs[0].containerVO is ObjectVO && _tabs[0].containerVO.pageVO.applicationVO.id != applicationID )
+							flag = true;
+					}
+					else
+					{
+						if ( _tabs[0].applicationVO.id != applicationID )
+							flag = true;
+					}
+				}
+				
+				if ( flag )
+				{
+					removeAll();
+					return true;
+				}
+				else
+					return false;
+					
+			}
+			
 			public function removeAll() : void
 			{
 				_tabs.removeAll();
