--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventsPanelSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventsPanelSkin.mxml
@@ -138,7 +138,7 @@
 			</s:Label>
 			
 			<mx:Image id="createServerAction" source="{VDOMImage.Plus}" height="20" width="20" right="10" top="5" 
-					  click="createServerAction_clickHandler(event)"/>
+					  smoothBitmapContent="true" click="createServerAction_clickHandler(event)"/>
 				
 			<s:Line top="0" width="100%">
 				<s:stroke>
