--- a/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/Body.mxml
+++ b/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/Body.mxml
@@ -5,9 +5,12 @@
 		  xmlns:s="library://ns.adobe.com/flex/spark"
 		  height="100%" width="100%">
 
-	<components:ResourcesList id="resourcesList"
+	<!--<components:ResourcesList id="resourcesList"
 							  height="100%" minWidth="200"/>
 
 	<components:WorkArea id="workArea"
-						 height="100%" width="100%"/>
+						 height="100%" width="100%"/> -->
+	
+	<components:ResourcesArea id="resourcesArea"
+							  width="100%" height="100%"/>
 </s:HGroup>
